cmake_minimum_required(VERSION 3.29)
project(code C)

set(CMAKE_C_STANDARD 11)

add_executable("DifferentWaysToAddParentheses" "241. Different ways to add parantheses/main.c")

add_executable("RemoveNodesFromLinkedList" "2487. Remove Nodes From Linked List/main.c")

add_executable("MergeTwoSortedLists" "21. Merge Two Sorted Lists/main.c")
