cmake_minimum_required(VERSION 3.29)
project(code C)

set(CMAKE_C_STANDARD 11)

add_executable("DifferentWaysToAddParentheses" "241. Different ways to add parantheses/main.c")

add_executable("RemoveNodesFromLinkedList" "2487. Remove Nodes From Linked List/main.c")

add_executable("MergeTwoSortedLists" "21. Merge Two Sorted Lists/main.c")

add_executable("PalindromeLinkedList" "234. Palindrome Linked List/main.c")

add_executable("ReorderList" "143. Reorder List/main.c")

add_executable("SwapNodesInPairs" "24. Swap Nodes in Pairs/main.c")

add_executable("DecodeString" "394. Decode String/main.c")

add_executable("PredictTheWinner" "486. Predict the Winner/main.c")

add_executable("WordSearch" "79. Word Search/main.c")

add_executable("MaximumSubarray" "53. Maximum Subarray/main.c")

add_executable("HouseRobber" "198. House Robber/main.c")
